--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -184,3 +184,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#TODO: MOVE out
+# exec stuff
+exec-once=waybar
+
+
