--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -141,7 +141,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating, 
 bind = $mainMod, P, exec, $menu
 bind = $mainMod, N, pseudo, # dwindle
-#bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -184,6 +184,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Move windows with mainmod shift + hjkl
+bind = $mainMod SHIFT, h,movewindow,l
+bind = $mainMod SHIFT, j,movewindow,d
+bind = $mainMod SHIFT, k,movewindow,u
+bind = $mainMod SHIFT, l,movewindow,r
 
 #TODO: MOVE out
 # exec stuff
