hypr:dunst and fullscreen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -191,8 +191,12 @@ bind = $mainMod SHIFT, j,movewindow,d
 bind = $mainMod SHIFT, k,movewindow,u
 bind = $mainMod SHIFT, l,movewindow,r
 
+# full screen
+bind = $mainMod , m,fullscreen
+
 #TODO: MOVE out
 # exec stuff
 exec-once=waybar
+exec-once=dunst
 
 
