hyprland: media keys

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -194,6 +194,16 @@ bind = $mainMod SHIFT, l,movewindow,r
 # full screen
 bind = $mainMod , m,fullscreen
 
+# Volume and Media Control
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+bind = , XF86AudioMicMute, exec, pamixer --default-source -m
+bind = , XF86AudioMute, exec, pamixer -t
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
+
 #TODO: MOVE out
 # exec stuff
 exec-once=waybar
