added support for nwg-displays

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $menu = wofi --show drun
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+#env = XDG_CURRENT_DESKTOP,sway
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -128,6 +129,8 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrule=float,^(flameshot)$
+windowrule=move 0 0,^(flameshot)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -204,8 +207,14 @@ bind = , XF86AudioPause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
+# source stuff
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/workspaces.conf
+
 #TODO: MOVE out
 # exec stuff
 exec-once=waybar
 exec-once=dunst
 exec-once=udiskie --tray
+#exec-once=flameshot
+#
