--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -143,7 +143,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating, 
 bind = $mainMod, P, exec, $menu
-bind = $mainMod, N, pseudo, # dwindle
+#bind = $mainMod, N, pseudo, # dwindle
 bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
@@ -177,8 +177,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, N, togglespecialworkspace, magic
+bind = $mainMod SHIFT, N, movetoworkspace, special:magic
+
+bind = $mainMod SHIFT, S, exec , hyprshot -m region
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
