--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -199,6 +199,9 @@ bind = $mainMod SHIFT, l,movewindow,r
 # full screen
 bind = $mainMod , m,fullscreen
 
+# wlogout
+bind = $mainMod , Backspace, exec, wlogout
+
 # Volume and Media Control
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
