polky authentication agent

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -221,5 +221,4 @@ source = ~/.config/hypr/workspaces.conf
 exec-once=waybar
 exec-once=dunst
 exec-once=udiskie --tray
-#exec-once=flameshot
-#
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
