--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -222,3 +222,5 @@ exec-once=waybar
 exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
+# autostart programs
+exec-once=spotify
