--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -143,7 +143,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating, 
 bind = $mainMod, P, exec, $menu
-#bind = $mainMod, N, pseudo, # dwindle
+bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
