added screenshot with swappy

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,7 +180,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, N, togglespecialworkspace, magic
 bind = $mainMod SHIFT, N, movetoworkspace, special:magic
 
-bind = $mainMod SHIFT, S, exec , hyprshot -m region
+# screen shot
+bind = $mainMod SHIFT, S, exec , /home/dan/scripts/screenshot.sh
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
