--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -181,7 +181,7 @@ bind = $mainMod, N, togglespecialworkspace, magic
 bind = $mainMod SHIFT, N, movetoworkspace, special:magic
 
 # screen shot
-bind = $mainMod SHIFT, S, exec , /home/dan/scripts/screenshot.sh
+bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
