move to workspace silent

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -178,7 +178,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, N, togglespecialworkspace, magic
-bind = $mainMod SHIFT, N, movetoworkspace, special:magic
+bind = $mainMod SHIFT, N, movetoworkspacesilent, special:magic
 
 # screen shot
 bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
