--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -176,6 +176,18 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Move active window to a workspace silent
+bind = $mainMod SHIFT ALT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT ALT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT ALT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT ALT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT ALT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT ALT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT ALT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT ALT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT ALT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT ALT, 0, movetoworkspacesilent, 10
+
 # Example special workspace (scratchpad)
 bind = $mainMod, N, togglespecialworkspace, magic
 bind = $mainMod SHIFT, N, movetoworkspacesilent, special:magic
