--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,6 +62,8 @@ general {
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
+
+    resize_on_border = true
 }
 
 decoration {
@@ -166,28 +168,28 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod CTRL, 1, movetoworkspace, 1
+bind = $mainMod CTRL, 2, movetoworkspace, 2
+bind = $mainMod CTRL, 3, movetoworkspace, 3
+bind = $mainMod CTRL, 4, movetoworkspace, 4
+bind = $mainMod CTRL, 5, movetoworkspace, 5
+bind = $mainMod CTRL, 6, movetoworkspace, 6
+bind = $mainMod CTRL, 7, movetoworkspace, 7
+bind = $mainMod CTRL, 8, movetoworkspace, 8
+bind = $mainMod CTRL, 9, movetoworkspace, 9
+bind = $mainMod CTRL, 0, movetoworkspace, 10
 
 # Move active window to a workspace silent
-bind = $mainMod SHIFT ALT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT ALT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT ALT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT ALT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT ALT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT ALT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT ALT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT ALT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT ALT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT ALT, 0, movetoworkspacesilent, 10
+bind = $mainMod SHIFT CTRL, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT CTRL, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT CTRL, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT CTRL, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT CTRL, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT CTRL, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT CTRL, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT CTRL, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT CTRL, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT CTRL, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, N, togglespecialworkspace, magic
@@ -205,10 +207,21 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Move windows with mainmod shift + hjkl
-bind = $mainMod SHIFT, h,movewindow,l
-bind = $mainMod SHIFT, j,movewindow,d
-bind = $mainMod SHIFT, k,movewindow,u
-bind = $mainMod SHIFT, l,movewindow,r
+bind = $mainMod CTRL, h,movewindow,l
+bind = $mainMod CTRL, j,movewindow,d
+bind = $mainMod CTRL, k,movewindow,u
+bind = $mainMod CTRL, l,movewindow,r
+
+
+# move between workspaces 
+bind = $mainMod SHIFT ALT, h,workspace,-1
+bind = $mainMod SHIFT ALT, l,workspace,+1
+
+# resize windows
+binde = $mainMod ALT, H,resizeactive,-10 0
+binde = $mainMod ALT, J,resizeactive,0 10
+binde = $mainMod ALT, K,resizeactive,0 -10
+binde = $mainMod ALT, L,resizeactive,10 0
 
 # full screen
 bind = $mainMod , m,fullscreen
