--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun
+# $menu = wofi --show drun
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -145,7 +145,7 @@ bind = $mainMod, Q, killactive,
 #bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating, 
-bind = $mainMod, P, exec, $menu
+bind = $mainMod, P, exec, pkill wofi || wofi --show drun
 bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 
@@ -167,7 +167,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active window to a workspace 
 bind = $mainMod CTRL, 1, movetoworkspace, 1
 bind = $mainMod CTRL, 2, movetoworkspace, 2
 bind = $mainMod CTRL, 3, movetoworkspace, 3
