--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -206,22 +206,29 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Move windows with mainmod shift + hjkl
-bind = $mainMod CTRL, h,movewindow,l
-bind = $mainMod CTRL, j,movewindow,d
-bind = $mainMod CTRL, k,movewindow,u
-bind = $mainMod CTRL, l,movewindow,r
+# swap windows windows 
+bind = $mainMod CTRL, h,swapwindow,l
+bind = $mainMod CTRL, j,swapwindow,d
+bind = $mainMod CTRL, k,swapwindow,u
+bind = $mainMod CTRL, l,swapwindow,r
 
 
 # move between workspaces 
-bind = $mainMod SHIFT ALT, h,workspace,-1
-bind = $mainMod SHIFT ALT, l,workspace,+1
+bind = $mainMod ALT, h,workspace,r-1
+bind = $mainMod ALT, l,workspace,r+1
+
+bind = $mainMod SHIFT CTRL ALT, h, movetoworkspacesilent,r-1 
+bind = $mainMod SHIFT CTRL ALT, l, movetoworkspacesilent,r+1
+
+bind = $mainMod CTRL ALT, h, movetoworkspace,r-1 
+bind = $mainMod CTRL ALT, l, movetoworkspace,r+1
 
 # resize windows
-binde = $mainMod ALT, H,resizeactive,-10 0
-binde = $mainMod ALT, J,resizeactive,0 10
-binde = $mainMod ALT, K,resizeactive,0 -10
-binde = $mainMod ALT, L,resizeactive,10 0
+binde = $mainMod ALT SHIFT, H,resizeactive,-10 0
+binde = $mainMod ALT SHIFT, J,resizeactive,0 10
+binde = $mainMod ALT SHIFT, K,resizeactive,0 -10
+binde = $mainMod ALT SHIFT, L,resizeactive,10 0
+
 
 # full screen
 bind = $mainMod , m,fullscreen
