hypr: minor keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -193,7 +193,7 @@ bind = $mainMod SHIFT CTRL, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, N, togglespecialworkspace, magic
-bind = $mainMod SHIFT, N, movetoworkspacesilent, special:magic
+bind = $mainMod CTRL, N, movetoworkspacesilent, special:magic
 
 # screen shot
 bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
