hypr: changed swap to move

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -207,10 +207,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # swap windows windows 
-bind = $mainMod CTRL, h,swapwindow,l
-bind = $mainMod CTRL, j,swapwindow,d
-bind = $mainMod CTRL, k,swapwindow,u
-bind = $mainMod CTRL, l,swapwindow,r
+bind = $mainMod CTRL, h,movewindow,l
+bind = $mainMod CTRL, j,movewindow,d
+bind = $mainMod CTRL, k,movewindow,u
+bind = $mainMod CTRL, l,movewindow,r
 
 
 # move between workspaces 
