changed terminal from kitty to wezterm

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ monitor=,preferred,auto,auto
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = kitty
+$terminal = wezterm
 $fileManager = thunar
 # $menu = wofi --show drun
 
