--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,255 +1,12 @@
-
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# Set programs that you use
-$terminal = wezterm
-$fileManager = thunar
-# $menu = wofi --show drun
-
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-#env = XDG_CURRENT_DESKTOP,sway
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-input {
-    kb_layout = no
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    resize_on_border = true
-}
-
-decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 5
-    
-    blur {
-        enabled = false
-        size = 3
-        passes = 1
-    }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
-
-animations {
-    enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
-
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
-
-misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_splash_rendering = true
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrule=float,^(flameshot)$
-windowrule=move 0 0,^(flameshot)$
-
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, Q, killactive, 
-#bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, W, togglefloating, 
-bind = $mainMod, P, exec, pkill wofi || wofi --show drun
-bind = $mainMod, D, pseudo, # dwindle
-bind = $mainMod SHIFT, Y, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace 
-bind = $mainMod CTRL, 1, movetoworkspace, 1
-bind = $mainMod CTRL, 2, movetoworkspace, 2
-bind = $mainMod CTRL, 3, movetoworkspace, 3
-bind = $mainMod CTRL, 4, movetoworkspace, 4
-bind = $mainMod CTRL, 5, movetoworkspace, 5
-bind = $mainMod CTRL, 6, movetoworkspace, 6
-bind = $mainMod CTRL, 7, movetoworkspace, 7
-bind = $mainMod CTRL, 8, movetoworkspace, 8
-bind = $mainMod CTRL, 9, movetoworkspace, 9
-bind = $mainMod CTRL, 0, movetoworkspace, 10
-
-# Move active window to a workspace silent
-bind = $mainMod SHIFT CTRL, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT CTRL, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT CTRL, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT CTRL, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT CTRL, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT CTRL, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT CTRL, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT CTRL, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT CTRL, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT CTRL, 0, movetoworkspacesilent, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, N, togglespecialworkspace, magic
-bind = $mainMod CTRL, N, movetoworkspacesilent, special:magic
-
-# screen shot
-bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# swap windows windows 
-bind = $mainMod CTRL, h,movewindow,l
-bind = $mainMod CTRL, j,movewindow,d
-bind = $mainMod CTRL, k,movewindow,u
-bind = $mainMod CTRL, l,movewindow,r
-
-
-# move between workspaces 
-bind = $mainMod ALT, h,workspace,r-1
-bind = $mainMod ALT, l,workspace,r+1
-
-bind = $mainMod SHIFT CTRL ALT, h, movetoworkspacesilent,r-1 
-bind = $mainMod SHIFT CTRL ALT, l, movetoworkspacesilent,r+1
-
-bind = $mainMod CTRL ALT, h, movetoworkspace,r-1 
-bind = $mainMod CTRL ALT, l, movetoworkspace,r+1
-
-# resize windows
-binde = $mainMod ALT SHIFT, H,resizeactive,-10 0
-binde = $mainMod ALT SHIFT, J,resizeactive,0 10
-binde = $mainMod ALT SHIFT, K,resizeactive,0 -10
-binde = $mainMod ALT SHIFT, L,resizeactive,10 0
-
-
-# full screen
-bind = $mainMod , m,fullscreen
-
-# wlogout
-bind = $mainMod , Backspace, exec, wlogout
-
-# Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
-bind = , XF86AudioMicMute, exec, pamixer --default-source -m
-bind = , XF86AudioMute, exec, pamixer -t
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioPause, exec, playerctl play-pause
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
-
-# source stuff
+source = ~/.config/hypr/options.conf
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/workspaces.conf
 
-#TODO: MOVE out
-# exec stuff
-exec-once=waybar
-exec-once=dunst
-exec-once=udiskie --tray
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
-# autostart programs
-exec-once=spotify
+
