--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,4 +1,4 @@
-exec-once=waybar
+exec-once=~/.scripts/launch-waybar.sh
 exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
