--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -9,8 +9,8 @@ bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 --allow-boost
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
