--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -9,14 +9,14 @@ bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 --allow-boost
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
+binde = , XF86AudioLowerVolume, exec, pamixer -d 5 --allow-boost
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
+binde = , XF86AudioNext, exec, playerctl next
+binde = , XF86AudioPrev, exec, playerctl previous
 
 # controls
 bind = $mainMod, Q, killactive, 
