--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -171,7 +171,7 @@
     "max-length": 40,
     "format-icons": {
       "spotify": "",
-      "default": "🎜"
+      "default": "󰌳"
     },
     "on-click": "playerctl play-pause",
     "on-click-right": "playerctl next",
