hypr: moved some scripts into hyprland

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -5,7 +5,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, P, exec, pkill wofi || wofi --show drun
 bind = $mainMod, E, exec, thunar
-bind = $mainMod SHIFT, S, exec , /home/dan/.scripts/screenshot.sh
+bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 
 # Volume and Media Control
