--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,5 +1,6 @@
-exec-once=~/.scripts/launch-waybar.sh
+exec-once=$scriptsPath/launch-waybar.sh
 exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=spotify
+
