--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,7 @@
+# global variables 
+$scriptsPath = ~/.config/hypr/scripts
+
+
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
