--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -3,4 +3,5 @@ exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=spotify
+exec-once=$scriptsPath/launch-sway-idle.sh
 
