--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -7,6 +7,7 @@ bind = $mainMod, P, exec, pkill wofi || wofi --show drun
 bind = $mainMod, E, exec, thunar
 bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
