--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -5,3 +5,5 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=spotify
 exec-once=$scriptsPath/launch-sway-idle.sh
 
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
