--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -4,10 +4,12 @@ $mainMod = SUPER
 # exec binds
 bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, P, exec, pkill wofi || wofi --show drun
+bind = $mainMod, R, exec, pkill wofi || wofi --show run
 bind = $mainMod, E, exec, thunar
 bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
