--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -7,3 +7,7 @@ exec-once=$scriptsPath/launch-sway-idle.sh
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
+# wallpaper
+exec-once = swww-daemon
+exec-once = swww img ~/Pictures/wallpapers/wallhaven-8586my.png
