moved wallpaper image location

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -10,4 +10,4 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 # wallpaper
 exec-once = swww-daemon
-exec-once = swww img ~/Pictures/wallpapers/wallhaven-8586my.png
+exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
