--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -11,3 +11,6 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # wallpaper
 exec-once = swww-daemon
 exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
+
+# keyboard remapper
+exec-once = kmonad ~/.config/kmonad/keychron_k2.kbd
