waybar: add several temperature paths

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -83,7 +83,12 @@
     "format": "{}% "
   },
   "temperature": {
-    "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+    "hwmon-path": [
+      "/sys/class/hwmon/hwmon0/temp1_input",
+      "/sys/class/hwmon/hwmon1/temp1_input",
+      "/sys/class/hwmon/hwmon2/temp1_input",
+      "/sys/class/hwmon/hwmon3/temp1_input"
+    ],
     "critical-threshold": 80,
     "format": "{temperatureC}°C  {icon}",
     "format-icons": [
