--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -13,7 +13,7 @@
   ],
   "modules-center": [
     "hyprland/workspaces",
-    "sway/scratchpad",
+    "sway/scratchpad"
   ],
   "modules-right": [
     "backlight", // laptop
@@ -29,11 +29,8 @@
     "warp-on-scroll": false,
     "format": "{name}: {icon}",
     "format-icons": {
-      "1": "",
-      "2": "",
-      "3": "",
-      "4": "",
-      "5": "",
+      "1": "",
+      "2": "",
       "urgent": "",
       "focused": "",
       "default": ""
