change keyremapper from kmonad to keymapper by houmain

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -13,4 +13,4 @@ exec-once = swww-daemon
 exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
 
 # keyboard remapper
-exec-once = kmonad ~/.config/kmonad/keychron_k2.kbd
+exec-once = keymapper
