hypr: firefox keybind

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -10,6 +10,7 @@ bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, F, exec, firefox
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
@@ -37,7 +38,7 @@ bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
-  bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
