changed config to accomodate new keybinds

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,5 +1,9 @@
 
 $mainMod = SUPER
+$moveKey = SHIFT
+$switchWorkspaceKey = CTRL
+$resizeKey = ALT
+$moveSilentKey = z
 
 # exec binds
 bind = $mainMod, Return, exec, wezterm
@@ -49,32 +53,21 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace 
-bind = $mainMod CTRL, 1, movetoworkspace, 1
-bind = $mainMod CTRL, 2, movetoworkspace, 2
-bind = $mainMod CTRL, 3, movetoworkspace, 3
-bind = $mainMod CTRL, 4, movetoworkspace, 4
-bind = $mainMod CTRL, 5, movetoworkspace, 5
-bind = $mainMod CTRL, 6, movetoworkspace, 6
-bind = $mainMod CTRL, 7, movetoworkspace, 7
-bind = $mainMod CTRL, 8, movetoworkspace, 8
-bind = $mainMod CTRL, 9, movetoworkspace, 9
-bind = $mainMod CTRL, 0, movetoworkspace, 10
+bind = $mainMod $moveKey, 1, movetoworkspace, 1
+bind = $mainMod $moveKey, 2, movetoworkspace, 2
+bind = $mainMod $moveKey, 3, movetoworkspace, 3
+bind = $mainMod $moveKey, 4, movetoworkspace, 4
+bind = $mainMod $moveKey, 5, movetoworkspace, 5
+bind = $mainMod $moveKey, 6, movetoworkspace, 6
+bind = $mainMod $moveKey, 7, movetoworkspace, 7
+bind = $mainMod $moveKey, 8, movetoworkspace, 8
+bind = $mainMod $moveKey, 9, movetoworkspace, 9
+bind = $mainMod $moveKey, 0, movetoworkspace, 10
 
-# Move active window to a workspace silent
-bind = $mainMod SHIFT CTRL, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT CTRL, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT CTRL, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT CTRL, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT CTRL, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT CTRL, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT CTRL, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT CTRL, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT CTRL, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT CTRL, 0, movetoworkspacesilent, 10
 
 # special workspace
 bind = $mainMod, N, togglespecialworkspace, magic
-bind = $mainMod CTRL, N, movetoworkspacesilent, special:magic
+bind = $mainMod $moveKey, N, movetoworkspacesilent, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -84,26 +77,63 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# swap windows windows 
-bind = $mainMod CTRL, h,movewindow,l
-bind = $mainMod CTRL, j,movewindow,d
-bind = $mainMod CTRL, k,movewindow,u
-bind = $mainMod CTRL, l,movewindow,r
+# move windows 
+bind = $mainMod $moveKey, h,movewindow,l
+bind = $mainMod $moveKey, j,movewindow,d
+bind = $mainMod $moveKey, k,movewindow,u
+bind = $mainMod $moveKey, l,movewindow,r
 
 # move between workspaces 
-bind = $mainMod ALT, h,workspace,r-1
-bind = $mainMod ALT, l,workspace,r+1
+bind = $mainMod $switchWorkspaceKey, h,workspace,r-1
+bind = $mainMod $switchWorkspaceKey, l,workspace,r+1
 
-bind = $mainMod SHIFT CTRL ALT, h, movetoworkspacesilent,r-1 
-bind = $mainMod SHIFT CTRL ALT, l, movetoworkspacesilent,r+1
 
-bind = $mainMod CTRL ALT, h, movetoworkspace,r-1 
-bind = $mainMod CTRL ALT, l, movetoworkspace,r+1
+bind = $mainMod $switchWorkspaceKey $moveKey, h, movetoworkspace,r-1 
+bind = $mainMod $switchWorkspaceKey $moveKey, l, movetoworkspace,r+1
 
 # resize windows
-binde = $mainMod ALT SHIFT, H,resizeactive,-10 0
-binde = $mainMod ALT SHIFT, J,resizeactive,0 10
-binde = $mainMod ALT SHIFT, K,resizeactive,0 -10
-binde = $mainMod ALT SHIFT, L,resizeactive,10 0
+binde = $mainMod $resizeKey, H,resizeactive,-10 0
+binde = $mainMod $resizeKey, J,resizeactive,0 10
+binde = $mainMod $resizeKey, K,resizeactive,0 -10
+binde = $mainMod $resizeKey, L,resizeactive,10 0
 
+# Move silent submap
+bind= $mainMod, $moveSilentKey,submap, movesilent
+
+submap = movesilent # start submap
+
+# Move active window to a workspace silent
+binde = , 1, movetoworkspacesilent, 1
+binde = , 2, movetoworkspacesilent, 2
+binde = , 3, movetoworkspacesilent, 3
+binde = , 4, movetoworkspacesilent, 4
+binde = , 5, movetoworkspacesilent, 5
+binde = , 6, movetoworkspacesilent, 6
+binde = , 7, movetoworkspacesilent, 7
+binde = , 8, movetoworkspacesilent, 8
+binde = , 9, movetoworkspacesilent, 9
+binde = , 0, movetoworkspacesilent, 10
+    
+# Move workspace relative silent
+binde = , h, movetoworkspacesilent,r-1 
+binde = , l, movetoworkspacesilent,r+1
+
+# escape submap after use 
+bind = , 1 , submap, reset 
+bind = , 2 , submap, reset 
+bind = , 3 , submap, reset 
+bind = , 4 , submap, reset 
+bind = , 5 , submap, reset 
+bind = , 6 , submap, reset 
+bind = , 7 , submap, reset 
+bind = , 8 , submap, reset 
+bind = , 9 , submap, reset 
+bind = , h , submap, reset 
+bind = , l , submap, reset 
+
+# cancel submap 
+bind = CTRL , c, submap, reset # exit submap
+bind = , escape, submap, reset # exit submap
+
+submap=reset
 
