--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -132,8 +132,9 @@ bind = , h , submap, reset
 bind = , l , submap, reset 
 
 # cancel submap 
-bind = CTRL , c, submap, reset # exit submap
-bind = , escape, submap, reset # exit submap
+bind = CTRL , c, submap, reset 
+bind = , escape, submap, reset 
+bind= $mainMod, $moveSilentKey,submap, reset 
 
 submap=reset
 
