--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, F, exec, firefox
 
 # Volume and Media Control
-binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost 
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost --unmute
 binde = , XF86AudioLowerVolume, exec, pamixer -d 5 --allow-boost
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
