waybar:enabled idle inhibitor

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -18,6 +18,7 @@
   ],
   "modules-right": [
     "backlight", // laptop
+    "idle_inhibitor",
     "custom/media",
     "pulseaudio",
     "clock",
