waybar: added timeout for idle_inhibitor

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -64,6 +64,7 @@
   },
   "idle_inhibitor": {
     "format": "{icon}",
+    "timeout": 240,
     "format-icons": {
       "activated": "",
       "deactivated": ""
