--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -33,6 +33,7 @@ bind = $mainMod, W, togglefloating,
 bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 bind = $mainMod , m,fullscreen
+bind = $mainMod, c , centerwindow
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
