--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,5 +11,6 @@ source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/workspaces.conf
+source = ~/.config/hypr/rules.conf
 
 
