--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -13,6 +13,7 @@ bind = $mainMod, E, exec, thunar
 bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist delete 
 bind = $mainMod, F, exec, firefox
 
 # Volume and Media Control
