battery notification and nm-applet

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -14,3 +14,6 @@ exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
 
 # keyboard remapper
 exec-once = keymapper
+
+exec-once=$scriptsPath/batterynotify.sh
+exec-once = nm-applet
