--- a/.config/hypr/options.conf
+++ b/.config/hypr/options.conf
@@ -43,4 +43,16 @@ misc {
 
 input {
     kb_layout = no
+
+    touchpad {
+        natural_scroll = yes
+        scroll_factor = 0.5
+        tap-and-drag = false
+        clickfinger_behavior = true
+    }
+}
+
+gestures {
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
