--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -26,6 +26,10 @@ bind = , XF86AudioPause, exec, playerctl play-pause
 binde = , XF86AudioNext, exec, playerctl next
 binde = , XF86AudioPrev, exec, playerctl previous
 
+bind = , XF86Go, exec, playerctl play-pause
+binde = , Cancel, exec, playerctl next
+binde = , XF86Messenger, exec, playerctl previous
+
 # brighness
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%- 
 binde = , XF86MonBrightnessUp , exec, brightnessctl set +5% 
