--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -30,7 +30,7 @@ bind = , XF86Go, exec, playerctl play-pause
 binde = , Cancel, exec, playerctl next
 binde = , XF86Messenger, exec, playerctl previous
 
-# brighness
+# brigthness
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%- 
 binde = , XF86MonBrightnessUp , exec, brightnessctl set +5% 
 
