--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -4,3 +4,5 @@ windowrulev2 = size 80%,class:(Spotify)
 windowrulev2 = center ,class:(Spotify)
 windowrulev2 = noinitialfocus ,class:(Spotify)
 
+windowrulev2 = workspace 2,class:(discord)
+windowrulev2 = noinitialfocus ,class:(discord)
