move to workspace 6 at startup

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -18,3 +18,4 @@ exec-once = keymapper
 exec-once=$scriptsPath/batterynotify.sh
 exec-once = nm-applet
 exec-once = discord
+exec-once = hyprctl dispatch workspace 6
