--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -1,8 +1,8 @@
 windowrulev2 = float,class:(Spotify)
-windowrulev2 = workspace 1,class:(Spotify)
+windowrulev2 = workspace 1 silent,class:(Spotify)
 windowrulev2 = size 80%,class:(Spotify)
 windowrulev2 = center ,class:(Spotify)
 windowrulev2 = noinitialfocus ,class:(Spotify)
 
-windowrulev2 = workspace 2,class:(discord)
+windowrulev2 = workspace 2 silent,class:(discord)
 windowrulev2 = noinitialfocus ,class:(discord)
