dpms button and gpt keybind

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -15,6 +15,8 @@ bind = $mainMod , Backspace, exec, wlogout
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist delete 
 bind = $mainMod, F, exec, firefox
+bind = $mainMod, G, exec, firefox -new-window https://chat.openai.com/
+bind = , XF86Display, exec, hyprctl dispatch dpms off
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost --unmute
