--- a/.config/hypr/options.conf
+++ b/.config/hypr/options.conf
@@ -39,6 +39,8 @@ dwindle {
 misc {
     force_default_wallpaper = 0 
     disable_splash_rendering = true
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
 }
 
 input {
