some windows now start floating

--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -6,3 +6,12 @@ windowrulev2 = noinitialfocus ,class:(Spotify)
 
 windowrulev2 = workspace 2 silent,class:(discord)
 windowrulev2 = noinitialfocus ,class:(discord)
+
+windowrulev2 = float,class:(nwg-displays)
+windowrulev2 = center,class:(nwg-displays)
+
+windowrulev2 = float,class:(pavucontrol)
+windowrulev2 = center,class:(pavucontrol)
+
+windowrulev2 = float,class:(nm-connection-editor)
+windowrulev2 = center,class:(nm-connection-editor)
