--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -9,7 +9,7 @@ $moveSilentKey = z
 bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, P, exec, pkill wofi || wofi --show drun
 bind = $mainMod, R, exec, pkill wofi || wofi --show run
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, gtk-launch yazi.desktop
 bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
