--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -8,7 +8,8 @@ $moveSilentKey = z
 # exec binds
 bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, P, exec, pkill wofi || wofi --show drun
-bind = $mainMod, R, exec, pkill wofi || wofi --show run
+# bind = $mainMod, R, exec, pkill wofi || wofi --show run
+bind = $mainMod, R, exec, [float;center] wezterm start --always-new-process --cwd ~/.scripts/ 
 bind = $mainMod, E, exec, gtk-launch yazi.desktop
 bind = $mainMod SHIFT, S, exec , $scriptsPath/screenshot.sh
 bind = $mainMod , Backspace, exec, wlogout
@@ -16,6 +17,8 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist delete 
 bind = $mainMod, F, exec, firefox
 bind = $mainMod, G, exec, firefox -new-window https://chat.openai.com/
+bind = $mainMod, D, exec, nwg-displays
+
 bind = , XF86Display, exec, hyprctl dispatch dpms off
 
 # Volume and Media Control
@@ -40,7 +43,6 @@ binde = , XF86MonBrightnessUp , exec, brightnessctl set +5%
 bind = $mainMod, Q, killactive, 
 #bind = $mainMod, M, exit, 
 bind = $mainMod, W, togglefloating, 
-bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod SHIFT, Y, togglesplit, # dwindle
 bind = $mainMod , m,fullscreen
 bind = $mainMod, c , centerwindow
