--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ $scriptsPath = ~/.config/hypr/scripts
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+env = WLR_NO_HARDWARE_CURSORS,1
 
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/autostart.conf
