--- a/.config/hypr/options.conf
+++ b/.config/hypr/options.conf
@@ -54,6 +54,11 @@ input {
     }
 }
 
+device {
+    name = tpps/2-elan-trackpoint
+    sensitivity = -0.5
+  }
+
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
