--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -75,7 +75,7 @@
   },
   "clock": {
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%d-%m-%Y}"
+    "format": "{:%a %d %b  %H:%M}"
   },
   "cpu": {
     "format": "{usage}% ",
