change spotify to use spotify-launcher

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -2,7 +2,7 @@ exec-once=$scriptsPath/launch-waybar.sh
 exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=spotify --ozone-platform-hint=wayland
+exec-once=spotify-launcher
 exec-once=$scriptsPath/launch-sway-idle.sh
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
