new spotify rules

--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -2,6 +2,10 @@ windowrulev2 = workspace 1 silent,title:(Spotify Premium)
 windowrulev2 = center ,title:(Spotify Premium)
 windowrulev2 = noinitialfocus ,title:(Spotify Premium)
 
+windowrulev2 = workspace 1 silent,class:(Spotify)
+windowrulev2 = center ,class:(Spotify)
+windowrulev2 = noinitialfocus ,class:(Spotify)
+
 windowrulev2 = workspace 2 silent,class:(discord)
 windowrulev2 = noinitialfocus ,class:(discord)
 
