nwg-displays no longer forced focus
it made it impossible to click on the accept window

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist delete 
 bind = $mainMod, F, exec, firefox
 bind = $mainMod, G, exec, firefox -new-window https://chat.openai.com/
-bind = $mainMod, D, exec, [stayfocused] nwg-displays
+bind = $mainMod, D, exec, nwg-displays
 
 bind = , XF86Display, exec, hyprctl dispatch dpms off
 
