--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -17,3 +17,7 @@ windowrulev2 = center,class:(pavucontrol)
 
 windowrulev2 = float,class:(nm-connection-editor)
 windowrulev2 = center,class:(nm-connection-editor)
+
+windowrulev2 = float,class:(yad)
+windowrulev2 = center,class:(yad)
+windowrulev2 = stayfocused,class:(yad)
