--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -20,6 +20,7 @@ bind = $mainMod, G, exec, firefox -new-window https://chat.openai.com/
 bind = $mainMod, D, exec, nwg-displays
 
 bind = , XF86Display, exec, hyprctl dispatch dpms off
+bind = $mainMod, Escape, exec, swaylock -f
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost --unmute
