--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -27,12 +27,12 @@ binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 --allow-boost --unmute
 binde = , XF86AudioLowerVolume, exec, pamixer -d 5 --allow-boost
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
-bind = , XF86AudioPlay, exec, playerctl play-pause -p spotify
-bind = , XF86AudioPause, exec, playerctl play-pause -p spotify
+bind = , XF86AudioPlay, exec, playerctl play-pause --player spotify
+bind = , XF86AudioPause, exec, playerctl play-pause --player spotify
 binde = , XF86AudioNext, exec, playerctl next
 binde = , XF86AudioPrev, exec, playerctl previous
 
-bind = , XF86Go, exec, playerctl play-pause -p spotify
+bind = , XF86Go, exec, playerctl play-pause --player spotify
 binde = , Cancel, exec, playerctl next
 binde = , XF86Messenger, exec, playerctl previous
 
