--- a/.config/hypr/options.conf
+++ b/.config/hypr/options.conf
@@ -45,6 +45,7 @@ misc {
 
 input {
     kb_layout = no
+    scroll_factor = 0.2
 
     touchpad {
         natural_scroll = yes
@@ -57,7 +58,7 @@ input {
 device {
     name = tpps/2-elan-trackpoint
     sensitivity = -0.5
-  }
+}
 
 gestures {
     workspace_swipe = true
