audio_idle_inhibit

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -19,6 +19,7 @@
   ],
   "modules-right": [
     "backlight", // laptop
+    "custom/audio_idle_inhibitor",
     "idle_inhibitor",
     "custom/media",
     "pulseaudio",
@@ -69,6 +70,18 @@
     "format-icons": {
       "activated": "",
       "deactivated": ""
+    }
+  },
+  "custom/audio_idle_inhibitor": {
+    "format": "{icon} ",
+    "exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
+    "exec-if": "which sway-audio-idle-inhibit",
+    "return-type": "json",
+    "format-icons": {
+      "output": "",
+      "input": "",
+      "output-input": "  ",
+      "none": ""
     }
   },
   "tray": {
