switch order of autostart

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,9 +1,10 @@
+# important
 exec-once=$scriptsPath/launch-waybar.sh
+exec-once=$scriptsPath/launch-sway-idle.sh
 exec-once=dunst
 exec-once=udiskie --tray
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=spotify-launcher
-exec-once=$scriptsPath/launch-sway-idle.sh
+exec-once=$scriptsPath/batterynotify.sh
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -15,7 +16,9 @@ exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
 # keyboard remapper
 exec-once = keymapper
 
-exec-once=$scriptsPath/batterynotify.sh
+exec-once = hyprctl dispatch workspace 6
+
+# other applications
 exec-once = nm-applet
 exec-once = discord
-exec-once = hyprctl dispatch workspace 6
+exec-once=spotify-launcher
