fix nvidia issues

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,7 +5,18 @@ $scriptsPath = ~/.config/hypr/scripts
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-env = WLR_NO_HARDWARE_CURSORS,1
+
+# nvidia specific envs 
+# https://wiki.hyprland.org/Nvidia/
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+cursor {
+    no_hardware_cursors = true
+}
+# end nvidia specific envs 
 
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/autostart.conf
