screen share stuff to install

--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -21,3 +21,10 @@ windowrulev2 = center,class:(nm-connection-editor)
 windowrulev2 = float,class:(yad)
 windowrulev2 = center,class:(yad)
 windowrulev2 = stayfocused,class:(yad)
+
+#screen share stuff
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
