--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,4 +1,5 @@
 # important
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=$scriptsPath/launch-waybar.sh
 exec-once=$scriptsPath/launch-sway-idle.sh
 exec-once=dunst
