replaced keymapper with xremap

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -15,7 +15,8 @@ exec-once = swww-daemon
 exec-once = swww img ~/.config/swww/wallpapers/wallhaven-8586my.png
 
 # keyboard remapper
-exec-once = keymapper
+# Sudo is possible because of this: https://github.com/xremap/xremap/issues/388
+exec-once = sudo xremap ~/.config/xremap/config.yml 
 
 exec-once = hyprctl dispatch workspace 6
 
