--- a/.config/keymapper.conf
+++ b/.config/keymapper.conf
@@ -1,3 +1,4 @@
+# TODO: REMOVE SINCE REPLACED WITH XREMAPPER
 # comments start with # or ; and continue until the end of a line
 (ControlLeft AltLeft){Any} >> AltRight{Any}
 
